# Bot

./: README.md  mine.py  pyproject.toml  Заметки_ебнутого.txt
bd/: bdSqlite.py
config_data/: config.py
handlers/: handlers.py  sempleInlineUpdate.json
keyboards/: kb.py  set_menu.py
lexicon/: text_for_bot.py
