[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Artee <kznartee16reg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
environs = "^11.0.0"
aiogram = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
